# kendall

./: Cargo.toml  LICENSE  README.md
examples/: kendall.rs
src/: kendall.rs  lib.rs  newton.rs  normal.rs
