[package]
name = "kendall"
version = "0.1.0"
authors = ["doraneko94 <shuntaro94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avlsort = { "git" = "https://github.com/doraneko94/avlsort", branch = "main" }
chrono = "0.4.19"
rand = "=0.8.3"
statrs = "0.14.0"
